# dbf-poly-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.bot  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
api/: auth.py  dependencies.py  main.py  middleware.py  rate_limit.py  schemas.py
api/routers/: activity.py  assistant.py  backtest.py  (+12 more)
bot/: __init__.py  config.py  main.py
deploy/: setup-https.sh
docs/: RESEARCH_IMPROVEMENT_PLAN.md  STRATEGY_GUIDE.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tests/: conftest.py  e2e_helpers.py  test_activity.py  test_aggressive_pricing.py  test_api_activity.py  test_api_auth.py  test_api_config.py  test_api_learner.py  test_api_portfolio.py  test_api_research.py  test_api_strategies.py  test_api_trades_risk_markets.py  test_arbitrage_strategy.py  test_auto_claim.py  test_backtesting.py  test_base_strategy.py  test_capital_flow.py  test_category_classifier.py  test_circuit_breaker.py  test_config.py  test_config_api.py  test_convergence.py  test_copy_trading_strategy.py  test_crypto_short_term_strategy.py  test_data_api.py  test_database.py  test_deep_research.py  test_e2e_advanced.py  test_e2e_advanced_part2.py  test_e2e_strategy_interaction.py  test_edge_adjustments.py  test_engine.py  test_event_bus.py  test_fear_greed_fetcher.py  test_fee_tracking.py  test_flash_crash_strategy.py  test_fred_fetcher.py  test_gamma.py  test_heartbeat.py  test_learner.py  (+72 more)
(+152 files in other folders)
