[project]
name = "dbf-poly-agent"
version = "0.1.0"
description = "Autonomous Polymarket trading bot with React dashboard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client>=0.18.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "websockets>=14.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "PyJWT>=2.12.0",
    "bcrypt>=4.0.0",
    "vadersentiment>=3.3.2",
    "feedparser>=6.0.12",
    "anthropic>=0.42.0",
    "web3>=7.0.0",
    "pywebpush>=2.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "vulture>=2.14",
]
